--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /vendor
 .env
 .env.backup
+.htaccess
 .env.production
 .phpactor.json
 .phpunit.result.cache
@@ -21,3 +22,4 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+
